[package]
name = "nearbyshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
mdns-sd = "0.7.4"
p256 = { version = "0.13.2", features = ["ecdh"] }
protobuf = "3.2.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
protobuf-codegen = "3.2.0"
