[package]
name = "nearbyshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.2"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
hex = "0.4.3"
hkdf = "0.12.3"
hmac = "0.12.1"
mdns-sd = "0.7.4"
p256 = { version = "0.13.2", features = ["ecdh"] }
protobuf = "3.2.0"
rand = "0.8.5"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
protobuf-codegen = "3.2.0"
